# vispiron

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: main.py  models.py  services.py
backend/tests/: conftest.py  css_colors.json  test_backend.py
frontend/: Dockerfile  app.py  config.py
